developed AppAxisChart